fix: header z-index error

--- a/app/components/header/header.css
+++ b/app/components/header/header.css
@@ -1,5 +1,9 @@
 /* Customizações do header */
 
+#header {
+  z-index: 2;
+}
+
 #header .menu-link {
   padding-bottom: 10px;
 }
